fix eu logo size on mobile

--- a/app/packs/stylesheets/recharge/_footer.scss
+++ b/app/packs/stylesheets/recharge/_footer.scss
@@ -22,6 +22,10 @@
     justify-content: center;
     flex-wrap: wrap;
 
+    .flag{
+      height: auto;
+      max-height: 8rem;
+    }
     &__img {
       height: 8rem;
 
